host cfg updates
