# pkg/api/host.go
@@ -6,6 +6,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/koodeyo/koodnet/pkg/database"
 	"github.com/koodeyo/koodnet/pkg/models"
+	"gorm.io/gorm"
 )
 
 // FindHosts godoc
@@ -21,7 +22,7 @@ func FindHosts(c *gin.Context) {
 	var hosts []models.Host
 
 	// Fetch data from the database with pagination
-	database.Conn.Model(&models.Host{}).Scopes(models.Paginate(c)).Find(&hosts)
+	database.Conn.Model(&models.Host{}).Preload("Configuration").Scopes(models.Paginate(c)).Find(&hosts)
 
 	response := paginated(hosts, c)
 
@@ -56,16 +57,14 @@ func CreateHost(c *gin.Context) {
 
 	// Create new host instance
 	host := models.Host{
-		Name:            dto.Name,
 		IP:              dto.IP,
-		StaticAddresses: dto.StaticAddresses,
-		Subnets:         dto.Subnets,
+		Name:            dto.Name,
 		Groups:          dto.Groups,
-		ListenPort:      dto.ListenPort,
-		IsLighthouse:    dto.IsLighthouse,
+		Subnets:         dto.Subnets,
 		NetworkID:       dto.NetworkID,
-		// ConfigOverrides: dto.ConfigOverrides,
-		InPub: []byte(dto.InPub),
+		Configuration:   dto.Configuration,
+		InPub:           []byte(dto.InPub),
+		StaticAddresses: dto.StaticAddresses,
 	}
 
 	// Save to database
@@ -109,7 +108,7 @@ func FindHost(c *gin.Context) {
 	id := c.Param("id")
 	var host models.Host
 
-	if err := database.Conn.First(&host, "id = ?", id).Error; err != nil {
+	if err := database.Conn.Preload("Configuration").First(&host, "id = ?", id).Error; err != nil {
 		dbErrorHandler(err, c)
 		return
 	}
@@ -128,19 +127,19 @@ func FindHost(c *gin.Context) {
 // @Success 200 {object} models.Host
 // @Failure 400 {object} api.errorResponse
 // @Failure 404 {object} api.errorResponse
-// @Router /hosts/{id} [patch]
+// @Router /hosts/{id} [put]
 func UpdateHost(c *gin.Context) {
 	id := c.Param("id")
 	var host models.Host
 
 	// Find existing host
-	if err := database.Conn.First(&host, "id = ?", id).Error; err != nil {
+	if err := database.Conn.Preload("Configuration").First(&host, "id = ?", id).Error; err != nil {
 		dbErrorHandler(err, c)
 		return
 	}
 
 	// Bind the update payload
-	var dto models.HostDto
+	var dto models.Host
 	if err := c.ShouldBindJSON(&dto); err != nil {
 		c.JSON(http.StatusBadRequest, errorResponse{
 			Errors: []apiError{
@@ -153,11 +152,51 @@ func UpdateHost(c *gin.Context) {
 		return
 	}
 
+	hasCfg := dto.Configuration != nil
+
+	// - Full association saving is conditionally enabled when a "Configuration" update is present.
+	dto.ID = host.ID
+	if hasCfg {
+		dto.Configuration.ID = host.Configuration.ID
+	}
+
 	// Update the host
-	if err := database.Conn.Model(&host).Updates(dto).Error; err != nil {
+	if err := database.Conn.Session(&gorm.Session{FullSaveAssociations: hasCfg}).Updates(&dto).Error; err != nil {
 		dbErrorHandler(err, c)
 		return
 	}
 
+	// Refresh host updates
+	database.Conn.Preload("Configuration").First(&host, "id = ?", id)
+
 	c.JSON(http.StatusOK, host)
+}
+
+// FindHostYamlConfig godoc
+// @Summary Get a host's configuration in YAML format
+// @Description Retrieve the YAML configuration of a single host by its ID. Optionally, download the configuration as a file.
+// @Tags hosts
+// @Param id path string true "Host ID"
+// @Param download query string false "Set this parameter to trigger file download (e.g., ?download=true)"
+// @Produce application/x-yaml
+// @Success 200 {string} YAML configuration of the host
+// @Failure 404 {object} api.errorResponse
+// @Router /hosts/{id}/config.yml [get]
+func FindHostYamlConfig(c *gin.Context) {
+	id := c.Param("id")
+	download := c.Query("download")
+	var host models.Host
+
+	if err := database.Conn.Preload("Configuration").Preload("Certificate").Preload("Network.Ca").First(&host, "id = ?", id).Error; err != nil {
+		dbErrorHandler(err, c)
+		return
+	}
+
+	ymlStr, _ := host.Marshal(true)
+	if download == "" {
+		c.String(http.StatusOK, ymlStr)
+		return
+	}
+
+	c.Data(http.StatusOK, "application/x-yaml", []byte(ymlStr))
 }
